# ImagePhysicalSizeShell

./: .gitattributes  .gitignore  CMakeLists.txt  LEIA-ME-INSTALACAO.txt  README.md  SECURITY.md  build.ps1  desinstalar.cmd  instalar.cmd  publicar-github.cmd  rollback-emergencia.cmd  test.ps1  verificar.cmd
.github/workflows/: windows-build.yml
docs/: architecture.md  configuration.md  dpi-detection.md  installation.md  known-risks.md  phase2-build-validation.md  property-schema.md  proxy-handler.md  rollback-simulation.md  rollback.md  testing.md  transactional-installer.md
installer/: ImagePhysicalSizeShell.Installation.psm1  install-shortcuts.ps1  install.ps1  ipsconfig.ps1  repair.ps1  rollback-emergency.cmd  rollback.ps1  status.ps1  uninstall.ps1
schema/: ImagePhysicalSize.propdesc
src/common/: JsonWriter.cpp  JsonWriter.hpp  RegistryAudit.cpp  RegistryAudit.hpp  Settings.cpp  Settings.hpp  Utf.cpp  Utf.hpp
src/configui/: main.cpp
src/diagnostic/: main.cpp
src/handler/: ClassFactory.cpp  ClassFactory.hpp  ComIds.hpp  DllExports.cpp  ImagePhysicalSizeShell.def  Module.cpp  Module.hpp  OriginalHandler.cpp  OriginalHandler.hpp  PhysicalSizePropertyHandler.cpp  PhysicalSizePropertyHandler.hpp  PropVariantHelpers.cpp  PropVariantHelpers.hpp  README.md
src/imaging/: ImageInspection.cpp  ImageInspection.hpp  MetadataParser.cpp  MetadataParser.hpp  PhysicalSize.cpp  PhysicalSize.hpp  README.md  StreamImageInspection.cpp  StreamImageInspection.hpp
src/property_schema/: PropertyKeys.hpp  README.md  RegisterSchema.cpp
tests/integration/: README.md
tests/shell/: README.md
tests/unit/: README.md  test_physical_size.cpp
tools/: phase2-preflight.ps1  validate-propdesc.ps1
